fixing templating issues

--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -13,25 +13,25 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link " href="#">
-        <span class="menu-title text-primary">Dashboard</span>
-        <i class="fa fa-home menu-icon text-primary"></i>
+      <a class="nav-link " href="/">
+        <span class="menu-title ">Dashboard</span>
+        <i class="fa fa-home menu-icon "></i>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link text" href="" >
+      <a class="nav-link" href="/partner" >
         <span class="menu-title">Partner</span>
         <i class="fa fa-user menu-icon"></i>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link text" href="" >
+      <a class="nav-link text" href="/chat" >
         <span class="menu-title">Chat</span>
         <i class="fa fa-wechat menu-icon"></i>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link text" href="" >
+      <a class="nav-link text" href="/help-center" >
         <span class="menu-title">Help Center</span>
         <i class="fa fa-question-circle menu-icon"></i>
       </a>
