--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -18,7 +18,7 @@
           </div>
         </a>
         <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-          <a class="dropdown-item" href="#">
+          <a class="dropdown-item" href="/logout">
             <i class="mdi mdi-logout me-2 text-primary"></i> Signout </a>
         </div>
       </li>
