--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -1,6 +1,6 @@
 <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
-    <a class="navbar-brand brand-logo" href="/"><img src="/assets/images/logo_unitalk.png" alt="logo" style="height: 200px; width: auto;"/></a>
-    <a class="navbar-brand brand-logo-mini" href="/"><img src="/assets/images/logo_unitalk_mini.png" alt="logo" style="height: auto; width: auto;" /></a>
+    <a class="navbar-brand brand-logo" href="#"><img src="/assets/images/logo_unitalk.png" alt="logo" style="height: 200px; width: auto;"/></a>
+    <a class="navbar-brand brand-logo-mini" href="#"><img src="/assets/images/logo_unitalk_mini.png" alt="logo" style="height: auto; width: auto;" /></a>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-stretch">
     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -14,7 +14,7 @@
             <span class="availability-status online"></span>
           </div>
           <div class="nav-profile-text">
-            <p class="mb-1 text-black">M. Fadhil</p>
+            <p class="mb-1 text-black"><%= user ? user.name : 'Guest' %></p>
           </div>
         </a>
         <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
