--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -16,6 +16,7 @@
         </nav>
         <!-- partial -->
         <div class="main-panel">
+            <%- include('./partials/auth') %>
             <%- body %>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
