--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,4 +1,4 @@
-<% if (!user.partnerIds) { %>
+<% if (!user.partnerId) { %>
     <div class="modal-overlay"></div> <!-- Background blur -->
     
     <div id="partnerModal" class="modal-container">
@@ -25,11 +25,23 @@
                 <form class="forms-sample">
                   <div class="form-group mb-5">
                     <h2 class="mb-3">Status</h2>
+                    <% if(user.status === 'accepted') { %>
                     <label type="text" class="form-control bg-gradient-success"> <h3 class="text-center text-white">Accepted</h3> </label>
+                    <% } else if(user.status === 'rejected') { %>
+                    <label type="text" class="form-control bg-gradient-danger"> <h3 class="text-center text-white">Rejected</h3> </label>
+                    <% } else { %>
+                    <label type="text" class="form-control bg-gradient-warning"> <h3 class="text-center text-white">Pending</h3> </label>                       
+                    <% } %>
                   </div>
                   
                   <div class="d-flex justify-content-center">
+                    <% if(user.status === 'accepted') { %>
                       <button type="submit" class="btn btn-gradient-primary ">Implement Chat</button>
+                      <% } else if(user.status === 'rejected') { %>
+                        <button type="submit" href="/" class="btn btn-gradient-primary ">Back To Dashboard</button>
+                      <% } else { %>
+                        <a href="/" class="btn btn-gradient-primary ">Back To Dashboard</a>
+                      <% } %>
                   </div>
                 </form>
               </div>
