--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -10,7 +10,7 @@
       <li class="nav-item nav-profile dropdown">
         <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
           <div class="nav-profile-img">
-            <img src="/assets/images/faces-clipart/pic-1.png" alt="profile" />
+            <img src="<%= user && user.logo_partner ? '/database/logo_partner/' + user.logo_partner : '/assets/images/faces-clipart/pic-1.png' %>" alt="profile" />
             <span class="availability-status online"></span>
           </div>
           <div class="nav-profile-text">
